--- a/index.html
+++ b/index.html
@@ -8,17 +8,11 @@
   </head>
   <body>
     <div id="root">
-      <h1>Hiiiiiiii</h1>
+      <h1>HelloWorld</h1>
     </div>
-    <script
-      crossorigin
-      src="https://unpkg.com/react@18/umd/react.development.js"
-    ></script>
-    <script
-      crossorigin
-      src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"
-    ></script>
-    <script src="./app.js">
-    </script>
+    <div>
+      <p>Hi i am Shashank</p>
+    </div>
   </body>
+  <script type="module" src="app.js"></script>
 </html>
